style:[S2] add textview

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -30,6 +30,7 @@
         android:gravity="center"
         android:id="@+id/judul"
         android:text="@string/example_bold"
+        android:textColor="@color/black"
         android:paddingTop="10dp"
         android:textSize="35dp" />
 
